--- a/preview/index.html
+++ b/preview/index.html
@@ -29,17 +29,19 @@
 
         <p class="mb-2">The json should be in the following format:</p>
         <pre class="text-xs m-2 bg-gray-800 p-2 rounded mb-4">
-[
-  {
-    "text": "Hello, world!",
-    "yaw": 180,
-    "pitch": 0,
-    "width": 10,
-    "height": 10,
-    "confidence": 0.9
-  },
-  ...
-]</pre
+{
+  "results": [
+    {
+      "text": "Hello, world!",
+      "yaw": 180,
+      "pitch": 0,
+      "width": 10,
+      "height": 10,
+      "confidence": 0.9
+    },
+    ...
+  ]
+}</pre
         >
         <div
           id="dropZone"
@@ -116,7 +118,6 @@
         mouse = new THREE.Vector2();
 
         window.addEventListener('resize', onWindowResize, false);
-        // window.addEventListener('mousemove', onMouseMove, false);
         renderer.domElement.addEventListener('mousemove', onMouseMove, false);
       }
 
@@ -128,10 +129,7 @@
       }
 
       function onMouseMove(event) {
-        // Get the canvas bounds
         const rect = renderer.domElement.getBoundingClientRect();
-
-        // Calculate mouse position relative to the canvas
         mouse.x = ((event.clientX - rect.left) / rect.width) * 2 - 1;
         mouse.y = -((event.clientY - rect.top) / rect.height) * 2 + 1;
       }
@@ -155,7 +153,7 @@
           const group = new THREE.Group();
           group.userData.isOCRResult = true;
           const sprite = createTextSprite(
-            `${result.text} (${result.confidence * 100}%)`
+            `${result.text} (${(result.confidence * 100).toFixed(0)}%)`
           );
           sprite.userData.originalScale = sprite.scale.clone();
           const boundingBoxGroup = createBoundingBox(result);
@@ -165,10 +163,11 @@
           scene.add(group);
         });
       }
+
       function createTextSprite(text) {
         const canvas = document.createElement('canvas');
         const context = canvas.getContext('2d');
-        const scale = 2; // Increase resolution
+        const scale = 2;
         context.font = `Bold ${20 * scale}px Arial`;
         const textWidth = context.measureText(text).width;
         canvas.width = textWidth + 20 * scale;
@@ -183,12 +182,11 @@
           context.fillText(text, 5 * scale, 22 * scale);
         }
 
-        updateCanvas(0.6); // Initial background opacity
+        updateCanvas(0.6);
 
         const texture = new THREE.Texture(canvas);
         texture.needsUpdate = true;
 
-        // disable z depth test so that the sprite is always rendered on top
         const spriteMaterial = new THREE.SpriteMaterial({
           map: texture,
           depthTest: false,
@@ -197,17 +195,13 @@
 
         sprite.scale.set(canvas.width / 10, canvas.height / 10, 1);
         sprite.userData.originalScale = sprite.scale.clone();
-        // sprite.userData.updateBackground = (opacity) => {
-        //   updateCanvas(opacity);
-        //   texture.needsUpdate = true;
-        // };
 
         return sprite;
       }
+
       function createBoundingBox(result) {
         const group = new THREE.Group();
 
-        // Create transparent plane for interaction
         const planeGeometry = new THREE.PlaneGeometry(1, 1);
         const planeMaterial = new THREE.MeshBasicMaterial({
           transparent: true,
@@ -216,7 +210,6 @@
         });
         const plane = new THREE.Mesh(planeGeometry, planeMaterial);
 
-        // Create visible border
         const borderGeometry = new THREE.EdgesGeometry(planeGeometry);
         const borderMaterial = new THREE.LineBasicMaterial({ color: 0xff0000 });
         const border = new THREE.LineSegments(borderGeometry, borderMaterial);
@@ -250,6 +243,7 @@
         const box = group.children[1];
         sprite.position.y = box.scale.y / 2 + sprite.scale.y / 2;
       }
+
       function resetOCRResults() {
         scene.traverse((object) => {
           if (
@@ -265,11 +259,11 @@
               sprite.userData.originalScale.y,
               1
             );
-            // sprite.userData.updateBackground(0.2); // Reset to initial opacity
             border.material.color.setHex(0xffff00);
           }
         });
       }
+
       function animate() {
         requestAnimationFrame(animate);
         controls.update();
@@ -293,7 +287,6 @@
             const boundingBoxGroup = group.children[1];
             const border = boundingBoxGroup.children[1];
 
-            // Increase text size proportionally
             const scaleFactor = 6;
             sprite.scale.set(
               sprite.userData.originalScale.x * scaleFactor,
@@ -301,13 +294,7 @@
               1
             );
 
-            // Make background opaque
-            // sprite.userData.updateBackground(0.8);
-
-            // Change border color
             border.material.color.setHex(0xff0000);
-
-            // make the cursor pointer
             renderer.domElement.style.cursor = 'pointer';
 
             break;
@@ -319,7 +306,6 @@
       init();
       animate();
 
-      // Drag and drop functionality
       const dropZone = document.getElementById('dropZone');
       const fileInput = document.getElementById('fileInput');
 
@@ -332,14 +318,11 @@
       dropZone.addEventListener('drop', (e) => {
         e.preventDefault();
         e.stopPropagation();
-
-        const files = e.dataTransfer.files;
-        handleFiles(files);
+        handleFiles(e.dataTransfer.files);
       });
 
       fileInput.addEventListener('change', (e) => {
-        const files = e.target.files;
-        handleFiles(files);
+        handleFiles(e.target.files);
       });
 
       function handleFiles(files) {
@@ -364,17 +347,17 @@
       function handleJSONDrop(file) {
         const reader = new FileReader();
         reader.onload = (e) => {
-          const results = JSON.parse(e.target.result);
-          const mappedResults = results.map((result) => {
-            return {
-              text: result.text,
-              yaw: 180 + result.yaw,
-              pitch: result.pitch,
-              width: result.width,
-              height: result.height,
-              confidence: result.confidence,
-            };
-          });
+          const data = JSON.parse(e.target.result);
+          // Support both old format (array) and new format (object with results)
+          const results = Array.isArray(data) ? data : data.results || [];
+          const mappedResults = results.map((result) => ({
+            text: result.text,
+            yaw: 180 + result.yaw,
+            pitch: result.pitch,
+            width: result.width,
+            height: result.height,
+            confidence: result.confidence,
+          }));
           addOCRResults(mappedResults);
         };
         reader.readAsText(file);
